--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-vite-template",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "start": "npm run dev",
     "dev": "vite --open --port 3000",
@@ -13,10 +14,14 @@
     "commit": "git add . && cz"
   },
   "dependencies": {
+    "@mantine/core": "7.11.2",
+    "@mantine/hooks": "7.11.2",
     "@tanstack/react-query": "5.51.9",
     "@tanstack/react-router": "1.45.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "redaxios": "0.5.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "5.51.9",
