--- a/package.json
+++ b/package.json
@@ -2,23 +2,30 @@
   "name": "react-vite-template",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "start": "npm run dev",
     "dev": "vite --open --port 3000",
     "build": "tsc -b && vite build",
     "test": "vitest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "import-meta-env -x .env.example && vite preview",
     "prepare": "husky",
     "commit": "git add . && cz"
   },
   "dependencies": {
+    "@mantine/core": "7.11.2",
+    "@mantine/hooks": "7.11.2",
     "@tanstack/react-query": "5.51.9",
     "@tanstack/react-router": "1.45.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "redaxios": "0.5.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
+    "@import-meta-env/cli": "0.6.9",
+    "@import-meta-env/unplugin": "0.5.2",
     "@tanstack/eslint-plugin-query": "5.51.9",
     "@tanstack/react-query-devtools": "5.51.9",
     "@tanstack/router-devtools": "1.45.4",
@@ -38,6 +45,9 @@
     "prettier": "3.3.3",
     "typescript": "5.2.2",
     "vite": "5.3.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.19.0"
   },
   "engines": {
     "npm": ">=10.0.0",
