add mantine appshell and example of auth route and page that call tanstack query

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 # To prevent accidentally leaking environment variables to the client, only keys listed in an example file
 APP_TITLE=
+APP_VERSION=
