--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "7.11.2",
     "@tanstack/react-query": "5.51.9",
     "@tanstack/react-router": "1.45.4",
+    "immer": "10.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "redaxios": "0.5.1",
@@ -30,6 +31,8 @@
     "@tanstack/react-query-devtools": "5.51.9",
     "@tanstack/router-devtools": "1.45.4",
     "@tanstack/router-plugin": "1.45.3",
+    "@total-typescript/ts-reset": "0.5.1",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.15.0",
