--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
     "ms-playwright.playwright",
-    "mattpocock.ts-error-translator"
+    "vitest.explorer",
+    "mattpocock.ts-error-translator",
   ]
 }
