update package script and vite config for test environment

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
-    "dev": "vite --open --port 3000",
-    "build": "tsc -b && vite build",
+    "generate-routes": "tsr generate",
+    "watch-routes": "tsr watch",
+    "dev": "vite --open --port 3000 && npm run watch-routes",
+    "build": "tsc -b && vite build && npm run generate-routes ",
     "test": "vitest",
     "e2e:run": "playwright test",
     "e2e:watch": "playwright test --ui",
@@ -34,6 +36,7 @@
     "@playwright/test": "1.45.3",
     "@tanstack/eslint-plugin-query": "5.51.9",
     "@tanstack/react-query-devtools": "5.51.9",
+    "@tanstack/router-cli": "1.45.8",
     "@tanstack/router-devtools": "1.45.4",
     "@tanstack/router-plugin": "1.45.3",
     "@testing-library/dom": "10.4.0",
