update lint staged in package

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "node": ">=20.0.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ]
