--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,5 +5,6 @@
     "ms-playwright.playwright",
     "vitest.explorer",
     "mattpocock.ts-error-translator",
+    "yoavbls.pretty-ts-errors"
   ]
 }
